[package]
name = "knaaktomatisering"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
serde = { version = "1.0.204", features = ["derive"] }
actix-web = { version = "4.8.0", default-features = false, features = ["rustls-0_23"] }
actix-cors = "0.7.0"
tracing-actix-web = "0.7.11"
noiseless-tracing-actix-web = "0.1.0"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
exact_request = { path = "../exact_request" }
exact_filter = { path = "../exact_filter" }
pretix_request = { path = "../pretix_request" }
thiserror = "1.0.62"
rustls = { version = "0.23.11", features = ["ring"] }
rustls-pemfile = "2.1.2"
http = "1.1.0"
time = { version = "0.3.36", features = ["local-offset"] }
futures-util = "0.3.30"
knaaktomatisering_proc = { path = "../knaaktomatisering_proc" }