[package]
name = "pretix_request"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"], default-features = false}
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "parsing"] }
thiserror = "1.0.63"
log = "0.4.22"
tokio = { version = "1.38.1", features = ["time"] }
serde-this-or-that = "0.4.2"